@@ -7,7 +7,7 @@
 
 CTAGS_TEST = ctags
 CTAGS_REF = ctags.ref
-TEST_OPTIONS = -nu --c-types=+px
+TEST_OPTIONS = -nu --c-kinds=+lpx
 
 DIFF_OPTIONS = -U 0 -I '^!_TAG'
 DIFF = if diff $(DIFF_OPTIONS) tags.ref tags.test > $(DIFF_FILE); then \
